--- a/Pages/NewListPage.xaml
+++ b/Pages/NewListPage.xaml
@@ -1,8 +1,8 @@
 <Page
-    x:Class="StockApp.Views.NewListView"
+    x:Class="StockApp.Pages.NewsListPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp.Views"
+    xmlns:local="using:StockApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:converters="using:StockApp.Converters" xmlns:models="using:StockApp.Models"
     mc:Ignorable="d"
