--- a/Pages/TransactionLogPage.xaml
+++ b/Pages/TransactionLogPage.xaml
@@ -1,8 +1,8 @@
 <Page
-    x:Class="StockApp.Views.TransactionLogView"
+    x:Class="StockApp.Pages.TransactionLogPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp.Views">
+    xmlns:local="using:StockApp">
 
     <Grid Padding="20">
         <Grid.RowDefinitions>
