--- a/Views/HomepageView.xaml
+++ b/Views/HomepageView.xaml
@@ -23,24 +23,24 @@
                 <Button Content="News"
                         Width="150"
                         Command="{Binding NavigateCommand}"
-                        CommandParameter="StockApp.Pages.NewsListView" />
+                        CommandParameter="NewsListPage" />
                 <Button Content="Create Stock"
                         Width="150"
                         Command="{Binding NavigateCommand}"
-                        CommandParameter="StockApp.Pages.CreateStockPage" />
+                        CommandParameter="CreateStockPage" />
                 <Button Content="History"
                         Width="150"
                         Command="{Binding NavigateCommand}"
-                        CommandParameter="StockApp.Pages.TransactionLogView" />
+                        CommandParameter="TransactionLogPage" />
                 <Button Content="Profile"
                         Width="150"
                         Visibility="{Binding ProfileButtonVisibility}"
                         Command="{Binding NavigateCommand}"
-                        CommandParameter="StockApp.Pages.ProfilePage" />
+                        CommandParameter="ProfilePage" />
                 <Button Content="Store"
                         Width="150"
                         Command="{Binding NavigateCommand}"
-                        CommandParameter="StockApp.Pages.GemStoreWindow" />
+                        CommandParameter="GemStoreWindow" />
             </StackPanel>
 
             <!-- Search & Sorting -->
