fix: activate create stock button when stock is valid

--- a/Pages/CreateStockPage.xaml
+++ b/Pages/CreateStockPage.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:StockApp.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="using:StockApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:CreateStockViewModel}"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -50,7 +50,7 @@
             <!-- Corrected IsAdmin binding -->
 
             <!-- Author CNP -->
-            <TextBox Text="{Binding AuthorCNP, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            <TextBox Text="{Binding AuthorCnp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                      PlaceholderText="Author CNP" Height="45" FontSize="16"
                      Background="#B0B0B0" Foreground="Black"
                      TextAlignment="Center" VerticalAlignment="Center"
@@ -59,7 +59,7 @@
             <!-- Corrected IsAdmin binding -->
 
             <Button Content="Create Stock"
-                Command="{Binding CreateStockCommand}"
+                Command="{Binding CreateStockCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Padding="12,6"
@@ -67,7 +67,7 @@
                 Foreground="Black"
                 FontSize="16"
                 CornerRadius="5"
-                IsEnabled="{Binding IsAdmin}" />
+                    />
             <!-- Corrected IsAdmin binding -->
 
             <TextBlock Text="{Binding Message}" 
