--- a/Pages/TransactionLogPage.xaml
+++ b/Pages/TransactionLogPage.xaml
@@ -2,7 +2,13 @@
     x:Class="StockApp.Pages.TransactionLogPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    xmlns:local="using:StockApp.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d:DataContext="{d:DesignInstance Type=local:TransactionLogViewModel, IsDesignTimeCreatable=True}">
+
+    <Page.Resources>
+        <local:TransactionLogViewModel x:Key="ViewModel"/>
+    </Page.Resources>
 
     <Grid Padding="20">
         <Grid.RowDefinitions>
@@ -59,7 +65,7 @@
                 <ComboBoxItem Content="Stock Name"/>
                 <ComboBoxItem Content="Total Value"/>
             </ComboBox>
-            <ComboBox Grid.Column="4" Width="100" SelectedItem="{Binding SelectedSortOrder, Mode=TwoWay}">
+            <ComboBox  Grid.Column="4" Width="100" SelectedItem="{Binding SelectedSortOrder, Mode=TwoWay}">
                 <ComboBoxItem Content="ASC" IsSelected="True"/>
                 <ComboBoxItem Content="DESC"/>
             </ComboBox>
@@ -133,12 +139,15 @@
 
                 <StackPanel Grid.Column="0" Margin="0,0,15,0">
                     <TextBlock Text="Start Date"/>
-                    <DatePicker SelectedDate="{Binding StartDate}" DateChanged="StartDateChanged"/>
+                    <DatePicker SelectedDate="{x:Bind viewModel.StartDateOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
+                               MaxYear="{x:Bind viewModel.EndDateOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1">
                     <TextBlock Text="End Date"/>
-                    <DatePicker SelectedDate="{Binding EndDate}" DateChanged="EndDateChanged"/>
+                    <DatePicker SelectedDate="{x:Bind viewModel.EndDateOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
+                                MinYear="{x:Bind viewModel.StartDateOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
                 </StackPanel>
             </Grid>
         </Grid>
