--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,54 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Title="StockApp">
+    
+    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <!-- Navigation bar -->
+            <NavigationView PaneDisplayMode="Top" SelectionChanged="NavigationView_SelectionChanged" IsSettingsVisible="False" IsBackButtonVisible="Collapsed">
+                <NavigationView.MenuItems>
+                    <NavigationViewItem Content="Users" Tag="UsersList"/>
+                    <NavigationViewItem Content="Chat reports" Tag="ChatReports"/>
+                    <NavigationViewItem Content="Loan requests" Tag="LoanRequest"/>
+                    <NavigationViewItem Content="Loans" Tag="Loans"/>
+                    <NavigationViewItem Content="BillSplit reports" Tag="BillSplitReports"/>
+                    <NavigationViewItem Content="Investments" Tag="Investments"/>
+                    <NavigationViewItem Content="Chuck Norris" Tag="Zodiac" Background="#539BF5" Foreground="#f2f2f2"/>
+                    <!-- Navigation bar -->
+                    
+                </NavigationView.MenuItems>
+            </NavigationView>
 
-    <Frame x:Name="rootFrame" NavigationFailed="OnNavigationFailed"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="15">
+                <Button Content="Create Profile"
+                Width="150"
+                Visibility="{Binding GuestButtonVisibility}"
+                Command="{Binding CreateProfileCommand}" />
+                            <Button Content="News"
+                Width="150"
+                Command="{Binding NavigateCommand}"
+                CommandParameter="NewsListPage" />
+                            <Button Content="Create Stock"
+                Width="150"
+                Command="{Binding NavigateCommand}"
+                CommandParameter="CreateStockPage" />
+                            <Button Content="History"
+                Width="150"
+                Command="{Binding NavigateCommand}"
+                CommandParameter="TransactionLogPage" />
+                            <Button Content="Profile"
+                Width="150"
+                Visibility="{Binding ProfileButtonVisibility}"
+                Command="{Binding NavigateCommand}"
+                CommandParameter="ProfilePage" />
+                            <Button Content="Store"
+                Width="150"
+                Command="{Binding NavigateCommand}"
+                CommandParameter="GemStoreWindow" />
+            </StackPanel>
+
+            <!-- Frame for navigation -->
+            <Frame Name="MainFrame" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="20"/>
+        </StackPanel>
+    </ScrollViewer>
 </Window>
