--- a/Pages/NewListPage.xaml
+++ b/Pages/NewListPage.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:StockApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:converters="using:StockApp.Converters" xmlns:models="using:StockApp.Models"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:converters="using:StockApp.Views.Converters" xmlns:models="using:StockApp.Models"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -28,22 +28,6 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-
-            <!-- Back Button - Now part of the header layout -->
-            <Button Grid.Column="0" 
-                    Content="Back" 
-                    Click="BackButtonClick"
-                    VerticalAlignment="Center" 
-                    Margin="0,0,12,0">
-                <Button.ContentTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal" Spacing="8">
-                            <FontIcon Glyph="&#xE72B;" FontSize="12"/>
-                            <TextBlock Text="Back"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </Button.ContentTemplate>
-            </Button>
 
             <!-- Title - Moved to middle column -->
             <TextBlock Grid.Column="1" 
