--- a/Views/Pages/AnalysisWindow.xaml
+++ b/Views/Pages/AnalysisWindow.xaml
@@ -1,5 +1,5 @@
 <Window
-    x:Class="Src.View.Pages.AnalysisWindow"
+    x:Class="StockApp.Views.Pages.AnalysisWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Src.Model"
