--- a/Views/Pages/ChatReportView.xaml
+++ b/Views/Pages/ChatReportView.xaml
@@ -1,7 +1,7 @@
-<Page x:Class="Src.Views.ChatReportView"
+<Page x:Class="StockApp.Views.Pages.ChatReportView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:Src">
+      xmlns:local="using:StockApp">
 
     <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="20">
         <TextBlock Text="Chat Reports" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" HorizontalAlignment="Left"/>
