--- a/Views/Pages/InvestmentsView.xaml
+++ b/Views/Pages/InvestmentsView.xaml
@@ -1,7 +1,7 @@
-<Page x:Class="Src.View.InvestmentsView"
+<Page x:Class="StockApp.Views.Pages.InvestmentsView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:Src">
+      xmlns:local="using:StockApp">
 
 	<StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20">
 		<TextBlock Text="Investments - Admin" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" HorizontalAlignment="Left"/>
