--- a/Views/Pages/LoanRequestView.xaml
+++ b/Views/Pages/LoanRequestView.xaml
@@ -1,7 +1,7 @@
-<Page x:Class="Src.Views.LoanRequestView"
+<Page x:Class="StockApp.Views.Pages.LoanRequestView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:Src">
+      xmlns:local="using:StockApp">
 
     <Grid Padding="20">
         <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Top">
