--- a/Views/Pages/TipHistoryWindow.xaml
+++ b/Views/Pages/TipHistoryWindow.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Window
-    x:Class="Src.View.Pages.TipHistoryWindow"
+    x:Class="StockApp.Views.Pages.TipHistoryWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Src.View.Pages"
+    xmlns:local="using:StockApp.Views.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
