--- a/Views/Pages/BillSplitReportPage.xaml
+++ b/Views/Pages/BillSplitReportPage.xaml
@@ -1,13 +1,34 @@
 <Page x:Class="StockApp.Views.Pages.BillSplitReportPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:StockApp">
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+     xmlns:local="using:StockApp" xmlns:converters="using:StockApp.Views.Converters">
 
-	<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="20">
-		<TextBlock Text="BillSplit Reports" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" HorizontalAlignment="Left"/>
+<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="20">
+	<TextBlock Text="BillSplit Reports" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" HorizontalAlignment="Left"/>
 
-		<ItemsControl x:Name="BillSplitReportsContainer">
-			<!-- Each individual ChatReportComponent will be added here dynamically -->
-		</ItemsControl>
-	</StackPanel>
+    <ItemsControl x:Name="BillSplitReportsContainer" ItemsSource="{Binding BillSplitReports, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">  
+       <ItemsControl.ItemTemplate>  
+           <DataTemplate>  
+               <StackPanel Orientation="Vertical" Margin="10">  
+                   <TextBlock Text="{Binding Id}" FontWeight="Bold" FontSize="18"/>  
+                   <TextBlock Text="Reported User CNP:" FontWeight="SemiBold" Margin="0,5,0,0"/>  
+                   <TextBlock Text="{Binding ReportedUserCnp}" TextWrapping="Wrap"/>  
+                   <TextBlock Text="Reporting User CNP:" FontWeight="SemiBold" Margin="0,5,0,0"/>  
+                   <TextBlock Text="{Binding ReportingUserCnp}" TextWrapping="Wrap"/>  
+                   <TextBlock Text="Date of Transaction:" FontWeight="SemiBold" Margin="0,5,0,0"/>  
+                        <TextBlock TextWrapping="Wrap">  
+                           <TextBlock.Resources>
+                                <converters:DateToStringConverter x:Key="DateConverter" />  
+                           </TextBlock.Resources>  
+                           <TextBlock.Text>  
+                               <Binding Path="DateOfTransaction" Converter="{StaticResource DateConverter}" />  
+                           </TextBlock.Text>  
+                        </TextBlock>
+                   <TextBlock Text="Bill Share:" FontWeight="SemiBold" Margin="0,5,0,0"/>  
+                   <TextBlock Text="{Binding BillShare}" TextWrapping="Wrap"/>  
+               </StackPanel>  
+           </DataTemplate>  
+       </ItemsControl.ItemTemplate>  
+    </ItemsControl>
+</StackPanel>
 </Page>
