fixed StockPage return button

--- a/Pages/StockPage.xaml
+++ b/Pages/StockPage.xaml
@@ -54,6 +54,7 @@
                         HorizontalAlignment="Center" 
                         Background="{Binding FavoriteButtonColor}"
                         Click="FavoriteButtonClick"
+                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
                         >
                     </Button>
 
@@ -65,6 +66,7 @@
                         Background="RoyalBlue"
                         Content="🔔"
                         Click="AlertsButtonClick"
+                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
                         >
                     </Button>
 
@@ -117,6 +119,7 @@
                         Background="#b5fc51"
                         Foreground="DarkGreen"    
                         Click="BuyButtonClick"
+                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
                     />
                     
                     <!-- Make me a number input (range input) that starts from 0 -->
@@ -136,6 +139,7 @@
                         Background="IndianRed"
                         Foreground="#471310"   
                         Click="SellButtonClick"  
+                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
                     />
 
                 </StackPanel>
