--- a/Views/HomepageView.xaml
+++ b/Views/HomepageView.xaml
@@ -47,7 +47,7 @@
                             <TextBlock Text="{x:Bind StockDetails.Symbol}" FontSize="16" FontWeight="Bold" Width="100" />
                             <TextBlock Text="{x:Bind StockDetails.Name}" Width="450" />
                             <TextBlock Text="{x:Bind StockDetails.Price}" Width="200" />
-                            <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200" />
+                            <TextBlock Text="{x:Bind Change}" Foreground="{Binding Change, Converter={StaticResource ChangeToColorConverter}}" Width="200" />
                             <Button Content="★"
                                     Width="100"
                                     Command="{Binding FavoriteCommand}"
@@ -64,20 +64,22 @@
                       ItemsSource="{Binding FilteredAllStocks}"
                       IsItemClickEnabled="True"
                       ItemClick="GoToStock">
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="model:HomepageStock">
-                        <StackPanel Orientation="Horizontal" Spacing="20">
+                <ListView.ItemTemplate>  
+                   <DataTemplate x:DataType="model:HomepageStock">  
+                       <StackPanel Orientation="Horizontal" Spacing="20">
                             <TextBlock Text="{x:Bind StockDetails.Symbol}" FontSize="16" FontWeight="Bold" Width="100" />
                             <TextBlock Text="{x:Bind StockDetails.Name}" Width="450" />
-                            <TextBlock Text="{x:Bind StockDetails.Price}" Width="200" />
-                            <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind ChangeColor}" Width="200" />
-                            <Button Content="{x:Bind FavoriteStar}"
-                                    Width="100"
-                                    Command="{Binding FavoriteCommand}"
-                                    CommandParameter="{x:Bind StockDetails}"
-                                    IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}" />
-                        </StackPanel>
-                    </DataTemplate>
+                            <TextBlock Text="{x:Bind StockDetails.Price}" Width="200" />  
+                           <TextBlock Text="{x:Bind Change}"  
+                                      Foreground="{Binding Change, Converter={StaticResource ChangeToColorConverter}}"  
+                                      Width="200" />  
+                           <Button Content="{Binding IsFavorite, Converter={StaticResource FavoriteToStarConverter}}"  
+                                   Width="100"  
+                                   Command="{Binding FavoriteCommand}"  
+                                   CommandParameter="{x:Bind}"  
+                                   IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}" />  
+                       </StackPanel>  
+                   </DataTemplate>  
                 </ListView.ItemTemplate>
             </ListView>
 
