--- a/Views/HomepageView.xaml
+++ b/Views/HomepageView.xaml
@@ -6,10 +6,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="using:StockApp.ViewModels"
-    xmlns:model="using:StockApp.Models"
+    xmlns:model="using:StockApp.Models" xmlns:converters="using:StockApp.Views.Converters"
     DataContext="{Binding ViewModel, RelativeSource={RelativeSource Self}}"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <converters:ChangeToColorConverter x:Key="ChangeToColorConverter" />
+        <converters:FavoriteToStarConverter x:Key="FavoriteToStarConverter" />
+    </Page.Resources>
     <!-- Main layout -->
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel Spacing="15">
@@ -47,7 +50,10 @@
                             <TextBlock Text="{x:Bind StockDetails.Symbol}" FontSize="16" FontWeight="Bold" Width="100" />
                             <TextBlock Text="{x:Bind StockDetails.Name}" Width="450" />
                             <TextBlock Text="{x:Bind StockDetails.Price}" Width="200" />
-                            <TextBlock Text="{x:Bind Change}" Foreground="{Binding Change, Converter={StaticResource ChangeToColorConverter}}" Width="200" />
+                            <TextBlock Text="{x:Bind Change}"  
+           Foreground="{Binding Change, Converter={StaticResource ChangeToColorConverter}}"  
+           Width="200" />
+                            <TextBlock Text="{x:Bind Change}" Foreground="{x:Bind Change, Converter={StaticResource ChangeToColorConverter}}" Width="200" />
                             <Button Content="★"
                                     Width="100"
                                     Command="{Binding FavoriteCommand}"
@@ -61,7 +67,7 @@
             <!-- All Stocks Section -->
             <TextBlock Text="All Stocks" FontSize="20" FontWeight="Bold" Margin="15,10,0,10" />
             <ListView x:Name="StocksList"
-                      ItemsSource="{Binding FilteredAllStocks}"
+                      ItemsSource="{Binding FilteredStocks}"
                       IsItemClickEnabled="True"
                       ItemClick="GoToStock">
                 <ListView.ItemTemplate>  
@@ -71,11 +77,12 @@
                             <TextBlock Text="{x:Bind StockDetails.Name}" Width="450" />
                             <TextBlock Text="{x:Bind StockDetails.Price}" Width="200" />  
                            <TextBlock Text="{x:Bind Change}"  
-                                      Foreground="{Binding Change, Converter={StaticResource ChangeToColorConverter}}"  
-                                      Width="200" />  
-                           <Button Content="{Binding IsFavorite, Converter={StaticResource FavoriteToStarConverter}}"  
+                                      Foreground="{x:Bind Change, Converter={StaticResource ChangeToColorConverter}}"  
+                                      Width="200" />
+
+                            <Button Content="{x:Bind IsFavorite, Converter={StaticResource FavoriteToStarConverter}}"  
                                    Width="100"  
-                                   Command="{Binding FavoriteCommand}"  
+                                   Command="{Binding DataContext.FavoriteCommand, ElementName=FavoritesList}"  
                                    CommandParameter="{x:Bind}"  
                                    IsEnabled="{Binding DataContext.CanModifyFavorites, ElementName=FavoritesList}" />  
                        </StackPanel>  
