Fix of the hour :D

--- a/Pages/StockPage.xaml
+++ b/Pages/StockPage.xaml
@@ -6,7 +6,7 @@
     xmlns:local="using:StockApp"
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="using:StockApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:StockPageViewModel}"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -40,6 +40,7 @@
                 HorizontalAlignment="Stretch" 
                 VerticalAlignment="Stretch"
                 Margin="10"
+                Series="{Binding Series}"
                 AnimationsSpeed="0"    
             >
             </lvc:CartesianChart>
