--- a/Views/Pages/CreateProfilePage.xaml
+++ b/Views/Pages/CreateProfilePage.xaml
@@ -4,14 +4,11 @@
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
    xmlns:local="using:StockApp.Views.Pages"  
+   xmlns:vm="using:StockApp.ViewModels"  
    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local1="using:StockApp.ViewModels"  
    mc:Ignorable="d"  
    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <Page.DataContext>
-        <local1:CreateProfilePageViewModel />
-    </Page.DataContext>
 
     <Grid>
         <StackPanel Padding="50" Spacing="30" Background="#FFF5EE" BorderBrush="#FF69B4" BorderThickness="10">
