--- a/Views/Components/TipHistoryComponent.xaml
+++ b/Views/Components/TipHistoryComponent.xaml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page
-    x:Class="StockApp.Views.Components.TipHistoryComponent"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp.Views.Components"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+<Page  
+   x:Class="StockApp.Views.Components.TipHistoryComponent"  
+   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
+   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
+   xmlns:local="using:StockApp.Views.Components"  
+   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
+   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
+   mc:Ignorable="d"  
+   Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">  
 
-    <Grid>
-        <StackPanel Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <TextBlock x:Name="TipTextBlock" FontSize="14" FontWeight="Bold" Margin="0,0,0,5"/>
-            <TextBlock x:Name="DateTextBlock" FontSize="18" FontWeight="Bold"/>
-        </StackPanel>
-    </Grid>
+   <Grid Width="1000">  
+       <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">  
+           <TextBlock x:Name="MessageTypeTextBlock" FontSize="14" FontWeight="Bold" Margin="0,0,0,5"  
+                      Text="{Binding Tip.Type}" />  
+           <TextBlock x:Name="MessageContentTextBlock" FontSize="14" Margin="0,0,0,5"  
+                      Text="{Binding MessageContent}" />  
+           <TextBlock x:Name="MessageIdTextBlock" FontSize="12" FontStyle="Italic"  
+                      Text="{Binding Id}" />  
+       </StackPanel>  
+   </Grid>  
 </Page>
