--- a/Views/Pages/LoansView.xaml
+++ b/Views/Pages/LoansView.xaml
@@ -1,18 +1,35 @@
 <Page x:Class="StockApp.Views.Pages.LoansView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:StockApp">
-
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="using:StockApp.Views.Components"
+      xmlns:viewModel="using:StockApp.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d:DataContext="{d:DesignInstance Type=viewModel:LoansViewModel}"
+      DataContext="{Binding RelativeSource={RelativeSource Self}}"
+      mc:Ignorable="d">
     <Grid Padding="20">
         <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Top">
-            <TextBlock Text="Loan Requests" FontSize="24" FontWeight="Bold" Margin="0,0,0,20"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Loan Requests" FontSize="24" FontWeight="Bold" Margin="0,0,0,20"/>
+                <Button
+                    Content="Refresh"
+                    Command="{Binding LoadLoansCommand}"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Margin="10,0,0,0"/>
+            </StackPanel>
 
-            <ItemsControl x:Name="LoansContainer" HorizontalAlignment="Stretch">
+            <ItemsControl ItemsSource="{Binding Loans, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
+
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <local:LoanComponent Loan="{Binding}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
 
                 <ItemsControl.ItemContainerStyle>
                     <Style TargetType="ContentPresenter">
