port last of the services to API improve news-related pages --partial implementation

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,9 +10,16 @@
     Title="StockApp">
     
     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1.0*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.05*"/>
+                <RowDefinition Height="0.95*"/>
+            </Grid.RowDefinitions>
             <!-- Navigation bar -->
-            <NavigationView PaneDisplayMode="Top" SelectionChanged="NavigationView_SelectionChanged" IsSettingsVisible="False" IsBackButtonVisible="Collapsed">
+            <NavigationView PaneDisplayMode="Top" SelectionChanged="NavigationView_SelectionChanged" IsSettingsVisible="False" IsBackButtonVisible="Collapsed" Grid.Column="0" Grid.Row="0">
                <NavigationView.MenuItems>
                     <NavigationViewItem Content="Home" Tag="HomePage"/>
                     <NavigationViewItem Content="Users" Tag="UsersList"/>
@@ -34,7 +41,7 @@
 
 
             <!-- Frame for navigation -->
-            <Frame Name="MainFrame" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="20"/>
-        </StackPanel>
+            <Frame Name="MainFrame" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="1"/>
+        </Grid>
     </ScrollViewer>
 </Window>
