--- a/Pages/ProfilePage.xaml
+++ b/Pages/ProfilePage.xaml
@@ -4,32 +4,38 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:StockApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="using:StockApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ProfilePageViewModel}"
     mc:Ignorable="d">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Padding="50" Spacing="30" Background="#FFF5EE" BorderBrush="#FF69B4" BorderThickness="10">
+        <StackPanel Padding="50" Spacing="30" Background="#FFF5EE" BorderBrush="#FF69B4" BorderThickness="3">
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="150" Background="#FFF5EE" Padding="20">
-                <TextBlock Text="Profile" FontSize="24" FontWeight="Bold" Foreground="#FF69B4"/>
-                <Button x:Name="updateWindowButton" Command="{x:Bind UpdateProfileButton}"
+                <TextBlock  FontSize="24" FontWeight="Bold" Foreground="#FF69B4">
+                    <Run Text="Profile Page:" />
+                    <Run Text="{Binding Username}" FontWeight="Bold" />
+                </TextBlock>
+                
+                <Button Command="{x:Bind UpdateProfileButton}"
                         Content="Update Profile" Background="#FF69B4" CornerRadius="10" Foreground="#FFF5EE" Padding="10" />
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4" BorderBrush="#770737" Spacing="20" Padding="20" Background="#FFB6C1" CornerRadius="10">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
-                    <Image x:Name="ProfileImage" Source="{Binding ImageSource}" Width="50" Height="50" Stretch="Uniform" Margin="10"/>
-                    <TextBlock x:Name="UsernameTextBlock" FontSize="50"/>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4" BorderBrush="#770737" Spacing="2" Padding="20" Background="#FFB6C1" CornerRadius="10">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="5">
+                    <Image Source="{Binding ImageSource}" Width="200" Height="200" Stretch="Fill"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Spacing="15">
                     <TextBlock Text="Description:" FontSize="16" Foreground="#770737"/>
-                    <TextBlock x:Name="ProfileDescription" Text="{Binding Description}" FontSize="16"/>
+                    <TextBlock Text="{Binding Description}" FontSize="16"/>
                 </StackPanel>
             </StackPanel>
 
             <StackPanel BorderThickness="4" BorderBrush="#770737" Spacing="20" Padding="20" Background="#FFB6C1" CornerRadius="10">
-                <TextBlock x:Name="UsernameMyStocks" FontSize="20" FontWeight="Bold" Foreground="#770737" />
-                <ListView x:Name="StocksListView" SelectionMode="Single" BorderThickness="1" BorderBrush="#770737" CornerRadius="10" IsItemClickEnabled="True" >
+                <TextBlock FontSize="20" FontWeight="Bold" Foreground="#770737" />
+                <ListView SelectionMode="Single" BorderThickness="1" BorderBrush="#770737" CornerRadius="10" IsItemClickEnabled="True"
+                          ItemsSource="{Binding UserStocks, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                          SelectedItem="{Binding SelectedStock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"      
+                    >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}" Padding="10" FontSize="14" Foreground="black"/>
@@ -37,12 +43,12 @@
                     </ListView.ItemTemplate>
                 </ListView>
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-                    <Button x:Name="EnterStockButton" Content="Enter" CornerRadius="10" Click="GoToStockButton" Padding="5" Background="#FF69B4" Foreground="#FFF5EE" />
+                    <Button Content="Enter" CornerRadius="10" Click="GoToStockButton" Padding="5" Background="#FF69B4" Foreground="#FFF5EE" />
                 </StackPanel>
             </StackPanel>
 
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="20">
-                <TextBlock x:Name="StockName" FontSize="18" FontWeight="SemiBold" Foreground="#FF69B4"/>
+                <TextBlock FontSize="18" FontWeight="SemiBold" Foreground="#FF69B4"/>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
