--- a/Views/AdminNewsControlView.xaml
+++ b/Views/AdminNewsControlView.xaml
@@ -27,7 +27,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Command="{x:Bind ViewModel.BackCommand}" Margin="0,0,16,0">
+            <Button Grid.Column="0" Command="{Binding BackCommand}" Margin="0,0,16,0">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon Glyph="&#xE72B;"/>
                     <TextBlock Text="Back"/>
@@ -49,14 +49,14 @@
 
             <StackPanel Grid.Column="0" Orientation="Horizontal" Spacing="10">
                 <ComboBox Width="200" PlaceholderText="Filter by status" 
-                          ItemsSource="{x:Bind ViewModel.Statuses, Mode=OneWay}" 
-                          SelectedItem="{x:Bind ViewModel.SelectedStatus, Mode=TwoWay}"/>
+                          ItemsSource="{Binding Statuses, Mode=OneWay}" 
+                          SelectedItem="{Binding SelectedStatus, Mode=TwoWay}"/>
                 <ComboBox Width="200" PlaceholderText="Filter by topic" 
-                          ItemsSource="{x:Bind ViewModel.Topics, Mode=OneWay}" 
-                          SelectedItem="{x:Bind ViewModel.SelectedTopic, Mode=TwoWay}"/>
+                          ItemsSource="{Binding Topics, Mode=OneWay}" 
+                          SelectedItem="{Binding SelectedTopic, Mode=TwoWay}"/>
             </StackPanel>
 
-            <Button Grid.Column="1" Command="{x:Bind ViewModel.RefreshCommand}">
+            <Button Grid.Column="1" Command="{Binding RefreshCommand}">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon Glyph="&#xE72C;"/>
                     <TextBlock Text="Refresh"/>
@@ -66,14 +66,14 @@
 
         <!-- Articles List -->
         <Grid Grid.Row="2" x:Name="ArticlesList">
-            <ProgressRing IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" 
+            <ProgressRing IsActive="{Binding IsLoading, Mode=OneWay}" 
                           Width="50" Height="50" 
                           HorizontalAlignment="Center" 
                           VerticalAlignment="Center"/>
 
-            <ListView ItemsSource="{x:Bind ViewModel.UserArticles, Mode=OneWay}"
+            <ListView ItemsSource="{Binding NewsArticles, Mode=OneWay}"
                       SelectionMode="Single"
-                      SelectedItem="{x:Bind ViewModel.SelectedArticle, Mode=TwoWay}">
+                      SelectedItem="{Binding SelectedArticle, Mode=TwoWay}">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:UserArticle">
                         <Grid Padding="12" Background="{ThemeResource CardBackgroundFillColorDefaultBrush}" 
@@ -157,7 +157,7 @@
             </ListView>
 
             <!-- Empty state -->
-            <StackPanel Visibility="{x:Bind ViewModel.IsEmptyState, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
+            <StackPanel Visibility="{Binding IsEmptyState, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
                         HorizontalAlignment="Center" 
                         VerticalAlignment="Center" 
                         Spacing="12">
@@ -169,7 +169,7 @@
                            Style="{StaticResource BodyTextBlockStyle}" 
                            HorizontalAlignment="Center" 
                            Opacity="0.7"/>
-                <Button Command="{x:Bind ViewModel.RefreshCommand}" 
+                <Button Command="{Binding RefreshCommand}" 
                         HorizontalAlignment="Center" 
                         Margin="0,8,0,0">
                     <TextBlock Text="Refresh"/>
