fixed the TipsHistoryWindow not showing tips bug

--- a/Views/Pages/TipHistoryWindow.xaml
+++ b/Views/Pages/TipHistoryWindow.xaml
@@ -16,8 +16,9 @@
         <ListBox x:Name="TipHistoryContainer" ItemsSource="{Binding TipHistory}" Width="1000">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <components:TipHistoryComponent DataContext="{Binding}" />
-                </DataTemplate>
+                    
+                    <TextBlock Text="{Binding TipText}" />
+                </DataTemplate> 
             </ListBox.ItemTemplate>
         </ListBox>
 
