--- a/App.xaml
+++ b/App.xaml
@@ -12,6 +12,10 @@
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
+            <Thickness x:Key="ContentDialogPadding">5,5,5,5</Thickness>
+            <x:Double x:Key="ContentDialogMaxWidth">2000</x:Double>
+            <x:Double x:Key="ContentDialogMaxHeight">2000</x:Double>
+
             <Style x:Key="CustomButtonStyle" TargetType="Button">
                 <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="BorderThickness" Value="0"/>
@@ -44,7 +48,6 @@
                 <Setter Property="BorderThickness" Value="0"/>
                 <Setter Property="Width" Value="100"/>
                 <Setter Property="Height" Value="50"/>
-
             </Style>
             <!-- Converters -->
             <converters:AmountColorConverter x:Key="AmountColorConverter"/>
@@ -58,6 +61,7 @@
             <converters:StatusToVisibilityConverter x:Key="StatusToApproveVisibilityConverter" />
             <converters:StatusToVisibilityConverter x:Key="StatusToRejectVisibilityConverter" />
             <converters:DateFormatConverter x:Key="DateFormatConverter" />
+            <converters:BoolToFavoriteColorConverter x:Key="BoolToFavoriteColorConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
