--- a/Pages/StockPage.xaml
+++ b/Pages/StockPage.xaml
@@ -1,155 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page
-    x:Class="StockApp.Pages.StockPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StockApp"
-    xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="using:StockApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:StockPageViewModel}"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+<Page  
+   x:Class="StockApp.Pages.StockPage"  
+   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
+   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
+   xmlns:local="using:StockApp"  
+   xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"  
+   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
+   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
+   xmlns:viewmodels="using:StockApp.ViewModels"  
+   d:DataContext="{d:DesignInstance Type=viewmodels:StockPageViewModel}"  
+   mc:Ignorable="d"  
+   Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">  
 
-    <!-- <Page.DataContext>
-        <local:StockPageViewModel />
-    </Page.DataContext> -->
+   <Grid Background="#161616">  
+       <Grid.RowDefinitions>  
+           <RowDefinition Height="Auto"/>  
+           <RowDefinition Height="*"/>  
+       </Grid.RowDefinitions>  
 
+       <StackPanel Grid.Row="0" Orientation="Horizontal" Height="60" HorizontalAlignment="Stretch" Background="#2D2D2D">  
+           <Button Content="Return" Width="100" Height="40" Margin="10" Click="ReturnButtonClick" VerticalAlignment="Center" />  
+           <TextBlock x:Name="StockSymbol" Text="{Binding SelectedStock.Symbol}" FontSize="16" Margin="0,0,10,0" Foreground="White" VerticalAlignment="Center" />  
+           <TextBlock x:Name="StockName" Text="{Binding SelectedStock.Name}" FontSize="16" Foreground="White" VerticalAlignment="Center" />  
+           <Button Command="{x:Bind command}" x:Name="AuthorButton" Content="Author" Width="100" Height="40" Margin="10" VerticalAlignment="Center" />  
+       </StackPanel>  
 
-    <Grid Background="#161616">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+       <Grid Grid.Row="1">  
+           <Grid.ColumnDefinitions>  
+               <ColumnDefinition Width="*"/>  
+               <ColumnDefinition Width="Auto"/>  
+           </Grid.ColumnDefinitions>  
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Height="60" HorizontalAlignment="Stretch" Background="#2D2D2D">
-            <Button Content="Return" Width="100" Height="40" Margin="10" Click="ReturnButtonClick" VerticalAlignment="Center" />
-            <TextBlock x:Name="StockSymbol" Text="{Binding StockSymbol}" FontSize="16" Margin="0,0,10,0" Foreground="White" VerticalAlignment="Center" />
-            <TextBlock x:Name="StockName" Text="{Binding StockName}" FontSize="16" Foreground="White" VerticalAlignment="Center" />
-            <Button Command="{x:Bind command}" x:Name="AuthorButton" Content="Author" Width="100" Height="40" Margin="10"  VerticalAlignment="Center" />
-        </StackPanel>
+           <lvc:CartesianChart  
+               x:Name="StockChart"  
+               Grid.Column="0"  
+               HorizontalAlignment="Stretch"  
+               VerticalAlignment="Stretch"  
+               Margin="10"  
+               Series="{Binding Series}"  
+               AnimationsSpeed="0">  
+           </lvc:CartesianChart>  
 
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
+           <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">  
+               <StackPanel Visibility="{Binding IsAuthenticated}" Margin="0, 10, 0, 10" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="10">  
 
-            <lvc:CartesianChart
-                x:Name="StockChart"
-                Grid.Column="0"
-                HorizontalAlignment="Stretch" 
-                VerticalAlignment="Stretch"
-                Margin="10"
-                Series="{Binding Series}"
-                AnimationsSpeed="0"    
-            >
-            </lvc:CartesianChart>
-            <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <StackPanel Visibility="{Binding GuestVisibility}" Margin="0, 10, 0, 10" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="10">
-                    
-                    <Button x:Name="FavoriteButton" 
-                        Content="★"
-                        Width="40" 
-                        Height="40" 
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Center" 
-                        Background="{Binding FavoriteButtonColor}"
-                        Click="FavoriteButtonClick"
-                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
-                        >
-                    </Button>
+                   <Button x:Name="FavoriteButton"  
+                       Width="40"  
+                       Height="40"  
+                       VerticalAlignment="Center"  
+                       HorizontalAlignment="Center"
+                       Background="{Binding IsFavorite, Converter={StaticResource BoolToFavoriteColorConverter}, ConverterParameter=Yellow|Black}"
+                       Click="FavoriteButtonClick"  
+                       IsEnabled="{Binding IsAuthenticated, Mode=TwoWay}">  
+                       <Button.Content>  
+                          <FontIcon  
+                              Glyph="&#xE735;"
+                              Foreground="{Binding IsFavorite, Converter={StaticResource BoolToFavoriteColorConverter}, ConverterParameter=Black|White}"
+                              FontSize="15" />  
+                       </Button.Content>  
+                   </Button>  
 
-                    <Button x:Name="AlertButton" 
-                        Width="40" 
-                        Height="40" 
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Center" 
-                        Background="RoyalBlue"
-                        Content="🔔"
-                        Click="AlertsButtonClick"
-                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
-                        >
-                    </Button>
+                   <Button x:Name="AlertButton"  
+                       Width="40"  
+                       Height="40"  
+                       VerticalAlignment="Center"  
+                       HorizontalAlignment="Center"  
+                       Background="RoyalBlue"  
+                       Content="🔔"  
+                       Click="AlertsButtonClick"  
+                       IsEnabled="{Binding IsAuthenticated, Mode=TwoWay}">  
+                   </Button>  
 
-                    <TextBlock x:Name="GemsLabel" 
-                        Text="{Binding UserGemsText}" 
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Center" 
-                        FontSize="16" 
-                        Foreground="#b5fc51"
-                        Margin="0,0,10,0"
-                    />
-                </StackPanel>
-                
-                <TextBlock
-                    Text="Price" 
-                    FontSize="16" 
-                    Foreground="#A6A6A6" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
-                    Margin="0, 10, 20, 10" />
-                <TextBlock x:Name="PriceLabel" 
-                    Text="" 
-                    FontSize="32" 
-                    Foreground="#b5fc51" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
-                    Margin="0, 10, 20, 10" />
-                <TextBlock x:Name="IncreaseLabel" 
-                    Text="" 
-                    FontSize="24" 
-                    Foreground="White" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
-                    Margin="0, 10, 20, 10" />
+                   <TextBlock x:Name="GemsLabel"  
+                       VerticalAlignment="Center"  
+                       HorizontalAlignment="Center"  
+                       FontSize="16"  
+                       Foreground="#b5fc51"  
+                       Margin="0,0,10,0">  
+                       <Run Text="Gems:"/>  
+                       <Run Text="{Binding UserGems}"/>  
+                   </TextBlock>  
+               </StackPanel>  
 
-                <TextBlock x:Name="OwnedStocks"
-                    Text="Owned: 0"
-                    FontSize="24"
-                    Foreground="White"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0, 10, 20, 10"
-                    Visibility="{Binding GuestVisibility}" />
+               <TextBlock  
+                   Text="Price"  
+                   FontSize="16"  
+                   Foreground="#A6A6A6"  
+                   HorizontalAlignment="Center"  
+                   VerticalAlignment="Center"  
+                   Margin="0, 10, 20, 10" />  
+               <TextBlock  
+                   FontSize="32"  
+                   Foreground="#b5fc51"  
+                   HorizontalAlignment="Center"  
+                   VerticalAlignment="Center"  
+                   Margin="0, 10, 20, 10">  
+                   <Run Text="Price:"/>  
+                   <Run Text="{Binding SelectedStock.Price}"/>  
+               </TextBlock>  
+               <TextBlock x:Name="IncreaseLabel"  
+                   Text=""  
+                   FontSize="24"  
+                   Foreground="White"  
+                   HorizontalAlignment="Center"  
+                   VerticalAlignment="Center"  
+                   Margin="0, 10, 20, 10" />  
 
-                <StackPanel Visibility="{Binding GuestVisibility}" Margin="0, 10, 0, 10" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="10">
-                    <Button x:Name="BuyButton" 
-                        Content="BUY"
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Center" 
-                        Background="#b5fc51"
-                        Foreground="DarkGreen"    
-                        Click="BuyButtonClick"
-                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
-                    />
-                    
-                    <!-- Make me a number input (range input) that starts from 0 -->
-                    <NumberBox 
-                        x:Name="QuantityInput"
-                        Minimum="1"
-                        Maximum="500"
-                        Value="1"
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Center" 
-                    />
+               <TextBlock  
+                   FontSize="24"  
+                   Foreground="White"  
+                   HorizontalAlignment="Center"  
+                   VerticalAlignment="Center"  
+                   Margin="0, 10, 20, 10"  
+                   Visibility="{Binding IsAuthenticated}">  
+                   <Run Text="Owned:"/>  
+                   <Run Text="{Binding OwnedStocks.Quantity}"/>  
+               </TextBlock>  
 
-                    <Button x:Name="SellButton" 
-                        Content="SELL"
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Center" 
-                        Background="IndianRed"
-                        Foreground="#471310"   
-                        Click="SellButtonClick"  
-                        IsEnabled="{Binding IsGuest, Mode=TwoWay}"
-                    />
+               <StackPanel Visibility="{Binding IsAuthenticated}" Margin="0, 10, 0, 10" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="10">  
+                   <Button x:Name="BuyButton"  
+                       Content="BUY"  
+                       VerticalAlignment="Center"  
+                       HorizontalAlignment="Center"  
+                       Background="#b5fc51"  
+                       Foreground="DarkGreen"  
+                       Click="BuyButtonClick"  
+                       IsEnabled="{Binding CanBuy, UpdateSourceTrigger=PropertyChanged}" />  
 
-                </StackPanel>
-            </StackPanel>
-        </Grid>
-    </Grid>
-    
+                   <NumberBox  
+                       x:Name="QuantityInput"  
+                       Minimum="1"  
+                       Maximum="500"  
+                       Value="1"  
+                       VerticalAlignment="Center"  
+                       HorizontalAlignment="Center" />  
 
-    <!-- <lvc:CartesianChart Series="{Binding Series}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  /> -->
-
-    <!-- <lvc:CartesianChart Series="{Binding Series}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" /> -->
+                   <Button x:Name="SellButton"  
+                       Content="SELL"  
+                       VerticalAlignment="Center"  
+                       HorizontalAlignment="Center"  
+                       Background="IndianRed"  
+                       Foreground="#471310"  
+                       Click="SellButtonClick"  
+                       IsEnabled="{Binding CanSell, UpdateSourceTrigger=PropertyChanged}" />  
+               </StackPanel>  
+           </StackPanel>  
+       </Grid>  
+   </Grid>  
 </Page>
